<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>m1u_gz</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="teemu@todo.todo">teemu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ros_gz_sim</depend>
  <depend>controller_manager</depend>
  <depend>xacro</depend>
  <depend>m1u_desc</depend>
  <depend>forward_command_controller</depend>
  <depend>joint_state_broadcaster</depend>

  <exec_depend>gz_ros2_control</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
